Add final task and refactor task2

--- a/lab5/makefile
+++ b/lab5/makefile
@@ -7,11 +7,11 @@ send_recv: send_recv.o
 send_recv.o: send_recv.c
 	$(CC) -c send_recv.c $(FLAGS)
 
-scatter_reduce: scatter_reduce.o
-	$(CC) -o scatter_reduce scatter_reduce.o $(FLAGS)
+reduce: reduce.o
+	$(CC) -o reduce reduce.o $(FLAGS)
 
-scatter_reduce.o: scatter_reduce.c
-	$(CC) -c scatter_reduce.c $(FLAGS)
+reduce.o: reduce.c
+	$(CC) -c reduce.c $(FLAGS)
 
 isend_irecv: isend_irecv.o
 	$(CC) -o isend_irecv isend_irecv.o $(FLAGS)
@@ -20,4 +20,4 @@ isend_irecv.o: isend_irecv.c
 	$(CC) -c isend_irecv.c $(FLAGS)
 
 clean:
-	rm -rf send_recv scatter_reduce isend_irecv *.o
+	rm -rf send_recv reduce isend_irecv *.o
